--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ button{background:#2563eb;color:white;cursor:pointer;}
 #pitchCount{font-weight:bold;margin-top:5px;}
 </style>
 </head>
-
 <body>
 
 <!-- LOGIN -->
@@ -68,7 +67,7 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <button onclick="exportCSV()">Export CSV</button>
 </div>
 
-<!-- Firebase Scripts -->
+<!-- Firebase Compat Scripts -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
@@ -97,14 +96,16 @@ let pitchCount = {balls:0,strikes:0};
 function signup(){
   const email=document.getElementById("email").value;
   const password=document.getElementById("password").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
   auth.createUserWithEmailAndPassword(email,password)
-    .then(cred=>login())
+    .then(cred=>initApp(cred.user))
     .catch(e=>alert(e.message));
 }
 
 function login(){
   const email=document.getElementById("email").value;
   const password=document.getElementById("password").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
   auth.signInWithEmailAndPassword(email,password)
     .then(cred=>initApp(cred.user))
     .catch(e=>alert(e.message));
@@ -159,16 +160,14 @@ function updatePitchers(){
   }
 }
 
-// --- DRAW STRIKE ZONE WITH 3x3 GRID ---
+// --- STRIKE ZONE 3x3 ---
 const zone=document.getElementById("zone");
 const ctx=zone.getContext("2d");
 function drawZone(){
   ctx.clearRect(0,0,320,420);
-  ctx.strokeStyle="white"; 
-  ctx.lineWidth=2;
-  ctx.strokeRect(80,100,160,200); // Strike zone box
+  ctx.strokeStyle="white"; ctx.lineWidth=2;
+  ctx.strokeRect(80,100,160,200); // Strike zone
 
-  // 3x3 grid
   const rows=3, cols=3;
   for(let r=1;r<rows;r++){
     ctx.beginPath();
@@ -213,24 +212,81 @@ zone.addEventListener("click",function(e){
 
   saveData();
   drawZone();
-  drawPitchDot(x, y);   // Draw the larger dot
-  drawHeat(); 
-  updateStats(); 
-  updateCountDisplay();
+  drawPitchDot(x, y);
+  drawHeat(); updateStats(); updateCountDisplay();
 });
 
-// --- DRAW PITCH DOT (LARGER SOLID CIRCLE) ---
-function drawPitchDot(x, y){
-  const radius = 8; // Larger dot size
-  ctx.fillStyle = "yellow"; // Color for the pitch dot
+// --- DRAW DOT ---
+function drawPitchDot(x,y){
+  ctx.fillStyle="yellow";
   ctx.beginPath();
-  ctx.arc(x, y, radius, 0, Math.PI * 2);
+  ctx.arc(x,y,8,0,Math.PI*2);
   ctx.fill();
 }
 
 // --- UNDO LAST PITCH ---
 function undoPitch(){
   const pitcher=document.getElementById("pitcherSelect").value;
-  if(!data[pitcher] || data[pitcher].length === 0) return;
-  const last = data[pitcher].pop();
-  if(last.x >= 80 && last.x <= 240 && last.y >= 100 &&
+  if(!data[pitcher]||data[pitcher].length===0) return;
+  const last=data[pitcher].pop();
+  if(last.x>=80 && last.x<=240 && last.y>=100 && last.y<=300) pitchCount.strikes--;
+  else if(last.swingMiss) pitchCount.strikes--;
+  else pitchCount.balls--;
+  saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
+}
+
+// --- CLEAR SESSION ---
+function clearSession(){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!data[pitcher]||data[pitcher].length===0) return;
+  if(confirm(`Clear all pitches for ${pitcher}?`)){
+    data[pitcher]=[];
+    resetCount(); saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
+  }
+}
+
+// --- HEATMAP ---
+const heat=document.getElementById("heat"); const heatCtx=heat.getContext("2d");
+function drawHeat(){
+  heatCtx.clearRect(0,0,320,420);
+  heatCtx.strokeStyle="white"; heatCtx.strokeRect(80,100,160,200);
+  const mode=document.getElementById("viewMode").value;
+  const pitcher=document.getElementById("pitcherSelect").value;
+  const pitchType=document.getElementById("pitchType").value;
+  let pitches=[];
+  if(mode==="team"){ for(let p in data)pitches=pitches.concat(data[p]); }
+  else{ pitches=data[pitcher]||[]; if(mode==="pitch") pitches=pitches.filter(p=>p.type===pitchType);}
+  pitches.forEach(p=>{
+    let grd=heatCtx.createRadialGradient(p.x,p.y,2,p.x,p.y,20);
+    grd.addColorStop(0,"rgba(255,0,0,0.6)");
+    grd.addColorStop(1,"rgba(255,0,0,0)");
+    heatCtx.fillStyle=grd; heatCtx.beginPath(); heatCtx.arc(p.x,p.y,20,0,Math.PI*2); heatCtx.fill();
+  });
+}
+
+// --- STATS ---
+function updateStats(){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!pitcher||!data[pitcher]) return;
+  const pitches=data[pitcher];
+  let strikes=0; pitches.forEach(p=>{ if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++; });
+  let percent=((strikes/pitches.length)*100).toFixed(1);
+  let daily={}; pitches.forEach(p=>{ daily[p.date]=(daily[p.date]||0)+1; });
+  let dailyText=""; for(let d in daily){ dailyText+=`${d}: ${daily[d]}<br>`; }
+  document.getElementById("stats").innerHTML=`Total Pitches: ${pitches.length}<br>Strike %: ${percent}%<br><b>Daily:</b><br>${dailyText}`;
+}
+
+// --- EXPORT CSV ---
+function exportCSV(){
+  let csv="Pitcher,Type,X,Y,Date,SwingMiss\n";
+  for(let p in data){ data[p].forEach(row=>{ csv+=`${p},${row.type},${row.x},${row.y},${row.date},${row.swingMiss}\n`; }); }
+  let a=document.createElement("a"); a.href=URL.createObjectURL(new Blob([csv],{type:'text/csv'})); a.download="bullpen.csv"; a.click();
+}
+
+// --- LISTENERS ---
+document.getElementById("pitcherSelect").addEventListener("change",()=>{ drawHeat(); updateStats(); });
+document.getElementById("viewMode").addEventListener("change", drawHeat);
+document.getElementById("pitchType").addEventListener("change", drawHeat);
+</script>
+</body>
+</html>
