--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <button onclick="exportCSV()">Export CSV</button>
 </div>
 
-<!-- Firebase Compat Scripts -->
+<!-- Firebase Scripts -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
@@ -91,6 +91,7 @@ const db = firebase.firestore();
 let user = null;
 let data = {};
 let pitchCount = {balls:0,strikes:0};
+let currentAtBatPitches = [];  // Stores current at-bat pitches
 
 // --- LOGIN/SIGNUP ---
 function signup(){
@@ -98,7 +99,7 @@ function signup(){
   const password=document.getElementById("password").value;
   if(!email || !password){ alert("Enter email and password"); return; }
   auth.createUserWithEmailAndPassword(email,password)
-    .then(cred=>initApp(cred.user))
+    .then(cred=>login())
     .catch(e=>alert(e.message));
 }
 
@@ -187,7 +188,7 @@ function drawZone(){
 function updateCountDisplay(){
   document.getElementById("pitchCount").innerText=`Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
 }
-function resetCount(){ pitchCount={balls:0,strikes:0}; updateCountDisplay(); }
+function resetCount(){ pitchCount={balls:0,strikes:0}; currentAtBatPitches=[]; updateCountDisplay(); }
 
 // --- RECORD PITCH ---
 zone.addEventListener("click",function(e){
@@ -202,91 +203,27 @@ zone.addEventListener("click",function(e){
   if(!data[pitcher]) data[pitcher]=[];
   data[pitcher].push(pitch);
 
-  // Update balls/strikes
-  if(x>=80 && x<=240 && y>=100 && y<=300) pitchCount.strikes++;
-  else if(swingMiss) pitchCount.strikes++;
-  else pitchCount.balls++;
+  // Determine if it's a ball or strike
+  let isStrike = x>=80 && x<=240 && y>=100 && y<=300;
+  let isBall = !isStrike;
 
-  if(pitchCount.strikes>=3){ alert("Strikeout!"); resetCount(); }
-  if(pitchCount.balls>=4){ alert("Walk!"); resetCount(); }
+  // Add to current at-bat pitches
+  currentAtBatPitches.push({ x, y, isStrike, pitchNumber: currentAtBatPitches.length + 1 });
+
+  // Update pitch count
+  if(isStrike) pitchCount.strikes++;
+  else if(isBall) pitchCount.balls++;
+
+  if(pitchCount.strikes >= 3){ alert("Strikeout!"); resetCount(); }
+  if(pitchCount.balls >= 4){ alert("Walk!"); resetCount(); }
 
   saveData();
   drawZone();
-  drawPitchDot(x, y);
+  drawPitchDots();
   drawHeat(); updateStats(); updateCountDisplay();
 });
 
-// --- DRAW DOT ---
-function drawPitchDot(x,y){
-  ctx.fillStyle="yellow";
-  ctx.beginPath();
-  ctx.arc(x,y,8,0,Math.PI*2);
-  ctx.fill();
-}
-
-// --- UNDO LAST PITCH ---
-function undoPitch(){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!data[pitcher]||data[pitcher].length===0) return;
-  const last=data[pitcher].pop();
-  if(last.x>=80 && last.x<=240 && last.y>=100 && last.y<=300) pitchCount.strikes--;
-  else if(last.swingMiss) pitchCount.strikes--;
-  else pitchCount.balls--;
-  saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
-}
-
-// --- CLEAR SESSION ---
-function clearSession(){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!data[pitcher]||data[pitcher].length===0) return;
-  if(confirm(`Clear all pitches for ${pitcher}?`)){
-    data[pitcher]=[];
-    resetCount(); saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
-  }
-}
-
-// --- HEATMAP ---
-const heat=document.getElementById("heat"); const heatCtx=heat.getContext("2d");
-function drawHeat(){
-  heatCtx.clearRect(0,0,320,420);
-  heatCtx.strokeStyle="white"; heatCtx.strokeRect(80,100,160,200);
-  const mode=document.getElementById("viewMode").value;
-  const pitcher=document.getElementById("pitcherSelect").value;
-  const pitchType=document.getElementById("pitchType").value;
-  let pitches=[];
-  if(mode==="team"){ for(let p in data)pitches=pitches.concat(data[p]); }
-  else{ pitches=data[pitcher]||[]; if(mode==="pitch") pitches=pitches.filter(p=>p.type===pitchType);}
-  pitches.forEach(p=>{
-    let grd=heatCtx.createRadialGradient(p.x,p.y,2,p.x,p.y,20);
-    grd.addColorStop(0,"rgba(255,0,0,0.6)");
-    grd.addColorStop(1,"rgba(255,0,0,0)");
-    heatCtx.fillStyle=grd; heatCtx.beginPath(); heatCtx.arc(p.x,p.y,20,0,Math.PI*2); heatCtx.fill();
-  });
-}
-
-// --- STATS ---
-function updateStats(){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!pitcher||!data[pitcher]) return;
-  const pitches=data[pitcher];
-  let strikes=0; pitches.forEach(p=>{ if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++; });
-  let percent=((strikes/pitches.length)*100).toFixed(1);
-  let daily={}; pitches.forEach(p=>{ daily[p.date]=(daily[p.date]||0)+1; });
-  let dailyText=""; for(let d in daily){ dailyText+=`${d}: ${daily[d]}<br>`; }
-  document.getElementById("stats").innerHTML=`Total Pitches: ${pitches.length}<br>Strike %: ${percent}%<br><b>Daily:</b><br>${dailyText}`;
-}
-
-// --- EXPORT CSV ---
-function exportCSV(){
-  let csv="Pitcher,Type,X,Y,Date,SwingMiss\n";
-  for(let p in data){ data[p].forEach(row=>{ csv+=`${p},${row.type},${row.x},${row.y},${row.date},${row.swingMiss}\n`; }); }
-  let a=document.createElement("a"); a.href=URL.createObjectURL(new Blob([csv],{type:'text/csv'})); a.download="bullpen.csv"; a.click();
-}
-
-// --- LISTENERS ---
-document.getElementById("pitcherSelect").addEventListener("change",()=>{ drawHeat(); updateStats(); });
-document.getElementById("viewMode").addEventListener("change", drawHeat);
-document.getElementById("pitchType").addEventListener("change", drawHeat);
-</script>
-</body>
-</html>
+// --- DRAW PITCH DOTS (with Pitch Number and Color) ---
+function drawPitchDots() {
+  ctx.fillStyle = "yellow"; // Default color for the pitch dots
+  currentAtBatPitches.forEach(pitch =>
