--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ button{background:#2563eb;color:white;cursor:pointer;}
 #pitchCount{font-weight:bold;margin-top:5px;}
 #sessionStats{margin-top:20px;}
 #pastSessions{margin-top:20px; max-height: 300px; overflow-y: scroll;}
+#loginError { color: red; margin-top: 10px; }
 </style>
 </head>
 <body>
@@ -20,10 +21,11 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <!-- LOGIN -->
 <div id="login">
 <h2>Login</h2>
-<input id="email" type="email" placeholder="Enter email"><br>
-<input id="password" type="password" placeholder="Password"><br>
+<input id="email" type="email" placeholder="Enter email" required><br>
+<input id="password" type="password" placeholder="Password" required><br>
 <button onclick="signup()">Sign Up</button>
 <button onclick="login()">Login</button>
+<p id="loginError"></p>  <!-- Error message area -->
 </div>
 
 <!-- APP -->
@@ -106,37 +108,60 @@ let bullpenSessions = {};  // Store past bullpen sessions per pitcher
 
 // --- LOGIN/SIGNUP ---
 function signup(){
-  const email=document.getElementById("email").value;
-  const password=document.getElementById("password").value;
-  if(!email || !password){ alert("Enter email and password"); return; }
-  auth.createUserWithEmailAndPassword(email,password)
-    .then(cred=>login())
-    .catch(e=>alert(e.message));
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  // Validate email and password
+  if (!email || !password) {
+    document.getElementById("loginError").textContent = "Please enter both email and password.";
+    return;
+  }
+
+  auth.createUserWithEmailAndPassword(email, password)
+    .then(cred => login())
+    .catch(e => {
+      document.getElementById("loginError").textContent = e.message;
+    });
 }
 
 function login(){
-  const email=document.getElementById("email").value;
-  const password=document.getElementById("password").value;
-  if(!email || !password){ alert("Enter email and password"); return; }
-  auth.signInWithEmailAndPassword(email,password)
-    .then(cred=>initApp(cred.user))
-    .catch(e=>alert(e.message));
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  // Validate email and password
+  if (!email || !password) {
+    document.getElementById("loginError").textContent = "Please enter both email and password.";
+    return;
+  }
+
+  document.getElementById("loginError").textContent = "";  // Clear previous error message
+
+  auth.signInWithEmailAndPassword(email, password)
+    .then(cred => initApp(cred.user))
+    .catch(e => {
+      document.getElementById("loginError").textContent = e.message;
+    });
 }
 
 // --- INIT APP ---
 function initApp(u){
-  user=u;
-  document.getElementById("login").style.display="none";
-  document.getElementById("app").style.display="block";
-  document.getElementById("userDisplay").innerText="User: "+u.email;
+  user = u;
+  document.getElementById("login").style.display = "none";
+  document.getElementById("app").style.display = "block";
+  document.getElementById("userDisplay").innerText = "User: " + u.email;
   loadData();
 }
 
 // --- LOAD / SAVE DATA ---
 function loadData(){
-  db.collection("users").doc(user.uid).get().then(doc=>{
-    if(doc.exists){ data=doc.data().data||{}; bullpenSessions = doc.data().bullpenSessions || {}; }
-    else{ data={}; bullpenSessions = {}; }
+  db.collection("users").doc(user.uid).get().then(doc => {
+    if (doc.exists) {
+      data = doc.data().data || {};
+      bullpenSessions = doc.data().bullpenSessions || {};
+    } else {
+      data = {};
+      bullpenSessions = {};
+    }
     updatePitchers();
     drawZone();
     drawHeat();
@@ -154,72 +179,74 @@ function saveData(){
 
 // --- PITCHERS ---
 function addPitcher(){
-  const name=document.getElementById("newPitcher").value.trim();
-  if(!name) return;
-  if(!data[name]) data[name]=[];
-  saveData(); updatePitchers(); document.getElementById("newPitcher").value="";
+  const name = document.getElementById("newPitcher").value.trim();
+  if (!name) return;
+  if (!data[name]) data[name] = [];
+  saveData(); 
+  updatePitchers(); 
+  document.getElementById("newPitcher").value = "";
 }
 
 function deletePitcher(){
-  const name=document.getElementById("pitcherSelect").value;
-  if(name){ delete data[name]; saveData(); updatePitchers(); resetCount(); drawHeat(); updateStats(); }
+  const name = document.getElementById("pitcherSelect").value;
+  if (name) {
+    delete data[name]; 
+    saveData(); 
+    updatePitchers(); 
+    resetCount(); 
+    drawHeat(); 
+    updateStats();
+  }
 }
 
 function updatePitchers(){
-  const select=document.getElementById("pitcherSelect");
-  select.innerHTML="";
-  for(let p in data){
-    let opt=document.createElement("option");
-    opt.value=p; opt.textContent=p;
+  const select = document.getElementById("pitcherSelect");
+  select.innerHTML = "";
+  for (let p in data) {
+    let opt = document.createElement("option");
+    opt.value = p; 
+    opt.textContent = p;
     select.appendChild(opt);
   }
 }
 
 // --- STRIKE ZONE 3x3 ---
-const zone=document.getElementById("zone");
-const ctx=zone.getContext("2d");
+const zone = document.getElementById("zone");
+const ctx = zone.getContext("2d");
+
 function drawZone(){
   ctx.clearRect(0,0,320,420);
-  ctx.strokeStyle="white"; ctx.lineWidth=2;
-  ctx.strokeRect(80,100,160,200); // Strike zone
+  ctx.strokeStyle = "white"; 
+  ctx.lineWidth = 2;
+  ctx.strokeRect(80, 100, 160, 200); // Strike zone
 
-  const rows=3, cols=3;
-  for(let r=1;r<rows;r++){
+  const rows = 3, cols = 3;
+  for (let r = 1; r < rows; r++) {
     ctx.beginPath();
-    ctx.moveTo(80,100 + r*(200/rows));
-    ctx.lineTo(240,100 + r*(200/rows));
+    ctx.moveTo(80, 100 + r * (200 / rows));
+    ctx.lineTo(240, 100 + r * (200 / rows));
     ctx.stroke();
   }
-  for(let c=1;c<cols;c++){
+  for (let c = 1; c < cols; c++) {
     ctx.beginPath();
-    ctx.moveTo(80 + c*(160/cols),100);
-    ctx.lineTo(80 + c*(160/cols),300);
+    ctx.moveTo(80 + c * (160 / cols), 100);
+    ctx.lineTo(80 + c * (160 / cols), 300);
     ctx.stroke();
   }
 }
 
 // --- PITCH COUNTS ---
 function updateCountDisplay(){
-  document.getElementById("pitchCount").innerText=`Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
+  document.getElementById("pitchCount").innerText = `Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
 }
-function resetCount(){ pitchCount={balls:0,strikes:0}; currentAtBatPitches=[]; updateCountDisplay(); }
+
+function resetCount(){ 
+  pitchCount = {balls: 0, strikes: 0}; 
+  currentAtBatPitches = [];
+  updateCountDisplay();
+}
 
 // --- RECORD PITCH ---
-zone.addEventListener("click",function(e){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!pitcher) return alert("Select pitcher");
-  const rect=zone.getBoundingClientRect();
-  const x=e.clientX-rect.left;
-  const y=e.clientY-rect.top;
-  const swingMiss=document.getElementById("swingMiss").checked;
-
-  const pitch={x,y,type:document.getElementById("pitchType").value,date:new Date().toLocaleDateString(),swingMiss};
-  if(!data[pitcher]) data[pitcher]=[];
-  data[pitcher].push(pitch);
-
-  // Determine if it's a ball or strike
-  let isStrike = x>=80 && x<=240 && y>=100 && y<=300;
-  let isBall = !isStrike;
-
-  // Add to current at-bat pitches
-  currentAtBatPitches.push({ x, y, is
+zone.addEventListener("click", function(e) {
+  const pitcher = document.getElementById("pitcherSelect").value;
+  if (!pitcher)
