--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ button{background:#2563eb;color:white;cursor:pointer;}
 #pitchCount{font-weight:bold;margin-top:5px;}
 #sessionStats{margin-top:20px;}
 #pastSessions{margin-top:20px; max-height: 300px; overflow-y: scroll;}
-#loginError { color: red; margin-top: 10px; }
 </style>
 </head>
 <body>
@@ -120,7 +119,7 @@ function signup(){
   auth.createUserWithEmailAndPassword(email, password)
     .then(cred => login())
     .catch(e => {
-      document.getElementById("loginError").textContent = `Sign up failed: ${e.message}`;
+      document.getElementById("loginError").textContent = e.message;
     });
 }
 
@@ -139,21 +138,7 @@ function login(){
   auth.signInWithEmailAndPassword(email, password)
     .then(cred => initApp(cred.user))
     .catch(e => {
-      // Firebase specific error handling for login failure
-      switch (e.code) {
-        case 'auth/wrong-password':
-          document.getElementById("loginError").textContent = "Incorrect password. Please try again.";
-          break;
-        case 'auth/user-not-found':
-          document.getElementById("loginError").textContent = "No user found with that email. Please sign up.";
-          break;
-        case 'auth/invalid-email':
-          document.getElementById("loginError").textContent = "Invalid email format. Please enter a valid email.";
-          break;
-        default:
-          document.getElementById("loginError").textContent = `Login failed: ${e.message}`;
-          break;
-      }
+      document.getElementById("loginError").textContent = e.message;
     });
 }
 
@@ -251,4 +236,23 @@ function drawZone(){
 
 // --- PITCH COUNTS ---
 function updateCountDisplay(){
-  document.getElementById
+  document.getElementById("pitchCount").innerText = `Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
+}
+
+function resetCount(){ 
+  pitchCount = {balls: 0, strikes: 0}; 
+  currentAtBatPitches = [];
+  updateCountDisplay();
+}
+
+// --- RECORD PITCH ---
+zone.addEventListener("click", function(e) {
+  const pitcher = document.getElementById("pitcherSelect").value;
+  if (!pitcher) return alert("Select pitcher");
+  const rect = zone.getBoundingClientRect();
+  const x = e.clientX - rect.left;
+  const y = e.clientY - rect.top;
+  const swingMiss = document.getElementById("swingMiss").checked;
+
+  const pitch = {x, y, type: document.getElementById("pitchType").value, date: new Date().toLocaleDateString(), swingMiss};
+  if (!
