--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <!-- LOGIN -->
 <div id="login">
 <h2>Login</h2>
-<input id="email" type="email" placeholder="Enter email" required><br>
-<input id="password" type="password" placeholder="Password" required><br>
+<input id="email" type="email" placeholder="Enter email"><br>
+<input id="password" type="password" placeholder="Password"><br>
 <button onclick="signup()">Sign Up</button>
 <button onclick="login()">Login</button>
 <p id="loginError"></p>  <!-- Error message area -->
