--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@ button, select, input{padding:8px;margin:5px;border-radius:8px;border:none;font-
 button{background:#2563eb;color:white;cursor:pointer;}
 #app{display:none; max-width:350px;margin:auto;}
 #pitchCount{font-weight:bold;margin-top:5px;}
-#sessionStats{margin-top:20px;}
-#pastSessions{margin-top:20px; max-height: 300px; overflow-y: scroll;}
 </style>
 </head>
 <body>
@@ -24,7 +22,6 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <input id="password" type="password" placeholder="Password"><br>
 <button onclick="signup()">Sign Up</button>
 <button onclick="login()">Login</button>
-<p id="loginError"></p>  <!-- Error message area -->
 </div>
 
 <!-- APP -->
@@ -57,7 +54,6 @@ button{background:#2563eb;color:white;cursor:pointer;}
 <label><input type="checkbox" id="swingMiss"> Swing & Miss</label>
 <button onclick="undoPitch()">Undo Last Pitch</button>
 <button onclick="clearSession()">Clear Session</button>
-<button onclick="endBullpen()">End Bullpen</button>
 <div id="pitchCount">Balls: 0 | Strikes: 0</div>
 
 <h2>Tap to Record Pitch</h2>
@@ -68,17 +64,10 @@ button{background:#2563eb;color:white;cursor:pointer;}
 
 <h3>Stats</h3>
 <div id="stats"></div>
-
-<h3>Session Stats</h3>
-<div id="sessionStats"></div>
-
-<h3>Past Sessions</h3>
-<div id="pastSessions"></div>
-
 <button onclick="exportCSV()">Export CSV</button>
 </div>
 
-<!-- Firebase Scripts -->
+<!-- Firebase Compat Scripts -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
@@ -102,65 +91,40 @@ const db = firebase.firestore();
 let user = null;
 let data = {};
 let pitchCount = {balls:0,strikes:0};
-let currentAtBatPitches = [];  // Stores current at-bat pitches
-let bullpenSessions = {};  // Store past bullpen sessions per pitcher
 
 // --- LOGIN/SIGNUP ---
 function signup(){
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-
-  // Validate email and password
-  if (!email || !password) {
-    document.getElementById("loginError").textContent = "Please enter both email and password.";
-    return;
-  }
-
-  auth.createUserWithEmailAndPassword(email, password)
-    .then(cred => login())
-    .catch(e => {
-      document.getElementById("loginError").textContent = e.message;
-    });
+  const email=document.getElementById("email").value;
+  const password=document.getElementById("password").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
+  auth.createUserWithEmailAndPassword(email,password)
+    .then(cred=>initApp(cred.user))
+    .catch(e=>alert(e.message));
 }
 
 function login(){
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-
-  // Validate email and password
-  if (!email || !password) {
-    document.getElementById("loginError").textContent = "Please enter both email and password.";
-    return;
-  }
-
-  document.getElementById("loginError").textContent = "";  // Clear previous error message
-
-  auth.signInWithEmailAndPassword(email, password)
-    .then(cred => initApp(cred.user))
-    .catch(e => {
-      document.getElementById("loginError").textContent = e.message;
-    });
+  const email=document.getElementById("email").value;
+  const password=document.getElementById("password").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
+  auth.signInWithEmailAndPassword(email,password)
+    .then(cred=>initApp(cred.user))
+    .catch(e=>alert(e.message));
 }
 
 // --- INIT APP ---
 function initApp(u){
-  user = u;
-  document.getElementById("login").style.display = "none";
-  document.getElementById("app").style.display = "block";
-  document.getElementById("userDisplay").innerText = "User: " + u.email;
+  user=u;
+  document.getElementById("login").style.display="none";
+  document.getElementById("app").style.display="block";
+  document.getElementById("userDisplay").innerText="User: "+u.email;
   loadData();
 }
 
 // --- LOAD / SAVE DATA ---
 function loadData(){
-  db.collection("users").doc(user.uid).get().then(doc => {
-    if (doc.exists) {
-      data = doc.data().data || {};
-      bullpenSessions = doc.data().bullpenSessions || {};
-    } else {
-      data = {};
-      bullpenSessions = {};
-    }
+  db.collection("users").doc(user.uid).get().then(doc=>{
+    if(doc.exists){ data=doc.data().data||{}; }
+    else{ data={}; }
     updatePitchers();
     drawZone();
     drawHeat();
@@ -170,89 +134,159 @@ function loadData(){
 }
 
 function saveData(){
-  db.collection("users").doc(user.uid).set({
-    data,
-    bullpenSessions
-  });
+  db.collection("users").doc(user.uid).set({data});
 }
 
 // --- PITCHERS ---
 function addPitcher(){
-  const name = document.getElementById("newPitcher").value.trim();
-  if (!name) return;
-  if (!data[name]) data[name] = [];
-  saveData(); 
-  updatePitchers(); 
-  document.getElementById("newPitcher").value = "";
+  const name=document.getElementById("newPitcher").value.trim();
+  if(!name) return;
+  if(!data[name]) data[name]=[];
+  saveData(); updatePitchers(); document.getElementById("newPitcher").value="";
 }
 
 function deletePitcher(){
-  const name = document.getElementById("pitcherSelect").value;
-  if (name) {
-    delete data[name]; 
-    saveData(); 
-    updatePitchers(); 
-    resetCount(); 
-    drawHeat(); 
-    updateStats();
-  }
+  const name=document.getElementById("pitcherSelect").value;
+  if(name){ delete data[name]; saveData(); updatePitchers(); resetCount(); drawHeat(); updateStats(); }
 }
 
 function updatePitchers(){
-  const select = document.getElementById("pitcherSelect");
-  select.innerHTML = "";
-  for (let p in data) {
-    let opt = document.createElement("option");
-    opt.value = p; 
-    opt.textContent = p;
+  const select=document.getElementById("pitcherSelect");
+  select.innerHTML="";
+  for(let p in data){
+    let opt=document.createElement("option");
+    opt.value=p; opt.textContent=p;
     select.appendChild(opt);
   }
 }
 
 // --- STRIKE ZONE 3x3 ---
-const zone = document.getElementById("zone");
-const ctx = zone.getContext("2d");
-
+const zone=document.getElementById("zone");
+const ctx=zone.getContext("2d");
 function drawZone(){
   ctx.clearRect(0,0,320,420);
-  ctx.strokeStyle = "white"; 
-  ctx.lineWidth = 2;
-  ctx.strokeRect(80, 100, 160, 200); // Strike zone
+  ctx.strokeStyle="white"; ctx.lineWidth=2;
+  ctx.strokeRect(80,100,160,200); // Strike zone
 
-  const rows = 3, cols = 3;
-  for (let r = 1; r < rows; r++) {
+  const rows=3, cols=3;
+  for(let r=1;r<rows;r++){
     ctx.beginPath();
-    ctx.moveTo(80, 100 + r * (200 / rows));
-    ctx.lineTo(240, 100 + r * (200 / rows));
+    ctx.moveTo(80,100 + r*(200/rows));
+    ctx.lineTo(240,100 + r*(200/rows));
     ctx.stroke();
   }
-  for (let c = 1; c < cols; c++) {
+  for(let c=1;c<cols;c++){
     ctx.beginPath();
-    ctx.moveTo(80 + c * (160 / cols), 100);
-    ctx.lineTo(80 + c * (160 / cols), 300);
+    ctx.moveTo(80 + c*(160/cols),100);
+    ctx.lineTo(80 + c*(160/cols),300);
     ctx.stroke();
   }
 }
 
 // --- PITCH COUNTS ---
 function updateCountDisplay(){
-  document.getElementById("pitchCount").innerText = `Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
+  document.getElementById("pitchCount").innerText=`Balls: ${pitchCount.balls} | Strikes: ${pitchCount.strikes}`;
 }
-
-function resetCount(){ 
-  pitchCount = {balls: 0, strikes: 0}; 
-  currentAtBatPitches = [];
-  updateCountDisplay();
-}
+function resetCount(){ pitchCount={balls:0,strikes:0}; updateCountDisplay(); }
 
 // --- RECORD PITCH ---
-zone.addEventListener("click", function(e) {
-  const pitcher = document.getElementById("pitcherSelect").value;
-  if (!pitcher) return alert("Select pitcher");
-  const rect = zone.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
-  const swingMiss = document.getElementById("swingMiss").checked;
+zone.addEventListener("click",function(e){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!pitcher) return alert("Select pitcher");
+  const rect=zone.getBoundingClientRect();
+  const x=e.clientX-rect.left;
+  const y=e.clientY-rect.top;
+  const swingMiss=document.getElementById("swingMiss").checked;
 
-  const pitch = {x, y, type: document.getElementById("pitchType").value, date: new Date().toLocaleDateString(), swingMiss};
-  if (!
+  const pitch={x,y,type:document.getElementById("pitchType").value,date:new Date().toLocaleDateString(),swingMiss};
+  if(!data[pitcher]) data[pitcher]=[];
+  data[pitcher].push(pitch);
+
+  // Update balls/strikes
+  if(x>=80 && x<=240 && y>=100 && y<=300) pitchCount.strikes++;
+  else if(swingMiss) pitchCount.strikes++;
+  else pitchCount.balls++;
+
+  if(pitchCount.strikes>=3){ alert("Strikeout!"); resetCount(); }
+  if(pitchCount.balls>=4){ alert("Walk!"); resetCount(); }
+
+  saveData();
+  drawZone();
+  drawPitchDot(x, y);
+  drawHeat(); updateStats(); updateCountDisplay();
+});
+
+// --- DRAW DOT ---
+function drawPitchDot(x,y){
+  ctx.fillStyle="yellow";
+  ctx.beginPath();
+  ctx.arc(x,y,8,0,Math.PI*2);
+  ctx.fill();
+}
+
+// --- UNDO LAST PITCH ---
+function undoPitch(){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!data[pitcher]||data[pitcher].length===0) return;
+  const last=data[pitcher].pop();
+  if(last.x>=80 && last.x<=240 && last.y>=100 && last.y<=300) pitchCount.strikes--;
+  else if(last.swingMiss) pitchCount.strikes--;
+  else pitchCount.balls--;
+  saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
+}
+
+// --- CLEAR SESSION ---
+function clearSession(){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!data[pitcher]||data[pitcher].length===0) return;
+  if(confirm(`Clear all pitches for ${pitcher}?`)){
+    data[pitcher]=[];
+    resetCount(); saveData(); drawZone(); drawHeat(); updateStats(); updateCountDisplay();
+  }
+}
+
+// --- HEATMAP ---
+const heat=document.getElementById("heat"); const heatCtx=heat.getContext("2d");
+function drawHeat(){
+  heatCtx.clearRect(0,0,320,420);
+  heatCtx.strokeStyle="white"; heatCtx.strokeRect(80,100,160,200);
+  const mode=document.getElementById("viewMode").value;
+  const pitcher=document.getElementById("pitcherSelect").value;
+  const pitchType=document.getElementById("pitchType").value;
+  let pitches=[];
+  if(mode==="team"){ for(let p in data)pitches=pitches.concat(data[p]); }
+  else{ pitches=data[pitcher]||[]; if(mode==="pitch") pitches=pitches.filter(p=>p.type===pitchType);}
+  pitches.forEach(p=>{
+    let grd=heatCtx.createRadialGradient(p.x,p.y,2,p.x,p.y,20);
+    grd.addColorStop(0,"rgba(255,0,0,0.6)");
+    grd.addColorStop(1,"rgba(255,0,0,0)");
+    heatCtx.fillStyle=grd; heatCtx.beginPath(); heatCtx.arc(p.x,p.y,20,0,Math.PI*2); heatCtx.fill();
+  });
+}
+
+// --- STATS ---
+function updateStats(){
+  const pitcher=document.getElementById("pitcherSelect").value;
+  if(!pitcher||!data[pitcher]) return;
+  const pitches=data[pitcher];
+  let strikes=0; pitches.forEach(p=>{ if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++; });
+  let percent=((strikes/pitches.length)*100).toFixed(1);
+  let daily={}; pitches.forEach(p=>{ daily[p.date]=(daily[p.date]||0)+1; });
+  let dailyText=""; for(let d in daily){ dailyText+=`${d}: ${daily[d]}<br>`; }
+  document.getElementById("stats").innerHTML=`Total Pitches: ${pitches.length}<br>Strike %: ${percent}%<br><b>Daily:</b><br>${dailyText}`;
+}
+
+// --- EXPORT CSV ---
+function exportCSV(){
+  let csv="Pitcher,Type,X,Y,Date,SwingMiss\n";
+  for(let p in data){ data[p].forEach(row=>{ csv+=`${p},${row.type},${row.x},${row.y},${row.date},${row.swingMiss}\n`; }); }
+  let a=document.createElement("a"); a.href=URL.createObjectURL(new Blob([csv],{type:'text/csv'})); a.download="bullpen.csv"; a.click();
+}
+
+// --- LISTENERS ---
+document.getElementById("pitcherSelect").addEventListener("change",()=>{ drawHeat(); updateStats(); });
+document.getElementById("viewMode").addEventListener("change", drawHeat);
+document.getElementById("pitchType").addEventListener("change", drawHeat);
+</script>
+</body>
+</html>
